refactor: 컬렉션 초기화 개선