@@ -14,8 +14,7 @@ public class LottoNumbersTest {
     @Test
     @DisplayName("올바른 크기의 로또 생성")
     void createLotto_makeRightLotto() {
-        Integer[] numbersArray = {1, 2, 3, 4, 5, 6};
-        List<Integer> numbers = Arrays.asList(numbersArray);
+        List<Integer> numbers = List.of(1, 2, 3, 4, 5, 6);
         Lotto lotto = new Lotto(numbers);
 
         assertThat(lotto.getLottoNumbers().size()).isEqualTo(6);
